chore: streamline environment setup and enhance workflows
- Simplifies `.envrc` by replacing custom logic with `layout pixi` and `layout uv`
- Updates Copier answers with project metadata and owner details
- Adds new GitHub workflows for automated PR management, repository maintenance, and releases
- Enhances MegaLinter configuration with additional module aliases and permissions
- Updates dependencies and project metadata in `pyproject.toml`

--- a/.github/copier/.copier-answers.share.yaml
+++ b/.github/copier/.copier-answers.share.yaml
@@ -1,5 +1,6 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: f3ce1f6
+# prettier-ignore
+_commit: 6892b55
 _src_path: gh:liblaf/copier-share
 copyright_holder: liblaf
 license: MIT
