--- a/.github/copier/.copier-answers.python.yaml
+++ b/.github/copier/.copier-answers.python.yaml
@@ -1,3 +1,9 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 343fcaf
+_commit: 73a44c3
 _src_path: gh:liblaf/copier-python
+author: liblaf
+email: 30631553+liblaf@users.noreply.github.com
+license: MIT
+name: liblaf-ai-cli
+owner: liblaf
+repo: ai-cli
