--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
   "liblaf-grapes>=0.0.1,<0.0.2",
   "litellm>=1.59.1,<2",
   "loguru>=0.7.3,<0.8",
+  "platformdirs>=4.3.6,<5",
   "pydantic-settings>=2.7.1,<3",
   "pydantic>=2.10.5,<3",
   "rich>=13.9.4,<14",
