feat: add prompt generator script and notebook for commit message generation
- Introduces a new Jupyter notebook and Python script for generating commit messages using AI
- Moves live action response handling to a utility function for reuse
- Updates dependencies to support new prompt generation functionality

--- a/.envrc
+++ b/.envrc
@@ -7,3 +7,6 @@ fi
 sd '^(\s*)?(?P<key>include-system-site-packages)(\s*)?=(\s*)?(?<val>.*)$' '$key = true' .venv/pyvenv.cfg
 # shellcheck disable=SC1091
 source .venv/bin/activate
+
+DEEPSEEK_API_KEY="$(rbw get --field API_KEY DeepSeek)"
+export DEEPSEEK_API_KEY
