--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,12 @@ build = [
   "check-wheel-contents>=0.6.1,<0.7",
   "twine>=6.0.1,<7",
 ]
-dev = ["icecream>=2.1.4,<3"]
+dev = [
+  "icecream>=2.1.4,<3",
+  "ipykernel>=6.29.5,<7",
+  "ipython>=8.31.0,<9",
+  "marimo>=0.10.15,<0.11",
+]
 
 [project]
 authors = [
