--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dependencies = [
   "platformdirs>=4.3.6,<5",
   "pydantic-settings>=2.7.1,<3",
   "pydantic>=2.10.5,<3",
+  "python-frontmatter>=1.1.0,<2",
   "rich>=13.9.4,<14",
   "typer-di>=0.1.2,<0.2",
 ]
