--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
   "python-frontmatter>=1.1.0,<2",
   "rich>=13.9.4,<14",
   "typer-di>=0.1.2,<0.2",
+  "typer>=0.15.1,<0.16",
 ]
 description = "Add your description here"
 keywords = []
