--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
   "rich>=13.9.4,<14",
   "typer-di>=0.1.2,<0.2",
   "typer>=0.15.1,<0.16",
+  "githubkit>=0.12.5",
 ]
 description = "Add your description here"
 keywords = []
