--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,31 +9,27 @@ requires = ["hatchling"]
 build = [
   "build>=1.2.2.post1,<2",
   "check-wheel-contents>=0.6.1,<0.7",
-  "twine>=6.0.1,<7",
+  "twine>=6.1.0,<7",
 ]
-dev = [
-  "icecream>=2.1.4,<3",
-  "ipykernel>=6.29.5,<7",
-  "ipython>=8.31.0,<9",
-  "marimo>=0.10.15,<0.11",
-]
+dev = ["icecream>=2.1.4,<3", "ipykernel>=6.29.5,<7", "ipython>=8.31.0,<9"]
 
 [project]
 authors = [
   { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
 ]
 dependencies = [
+  "emoji>=2.14.1,<3",
   "githubkit>=0.12.5",
   "gitpython>=3.1.44,<4",
   "hishel>=0.1.1,<0.2",
-  "httpx[socks]>=0.28.1,<0.29",
+  "httpx[socks]>=0.27.2,<0.28",
   "lazy-loader>=0.4,<0.5",
   "liblaf-grapes>=0.0.1,<0.0.2",
-  "litellm>=1.59.1,<2",
+  "litellm>=1.59.7,<2",
   "loguru>=0.7.3,<0.8",
   "platformdirs>=4.3.6,<5",
   "pydantic-settings>=2.7.1,<3",
-  "pydantic>=2.10.5,<3",
+  "pydantic>=2.10.6,<3",
   "python-frontmatter>=1.1.0,<2",
   "rich>=13.9.4,<14",
   "typer-di>=0.1.2,<0.2",
