chore(copier): update from template

--- a/.github/copier/.copier-answers.python.yaml
+++ b/.github/copier/.copier-answers.python.yaml
@@ -1,5 +1,6 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 5408f05
+# prettier-ignore
+_commit: e9987ad
 _src_path: gh:liblaf/copier-python
 author: liblaf
 email: 30631553+liblaf@users.noreply.github.com
