feat: add version management and update dependencies
- introduce version management using hatch-vcs
- add dynamic version handling in pyproject.toml
- update dependencies and build system configuration

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -6,6 +6,10 @@ site_name: "liblaf-lime"
 site_description: TODO
 
 plugins:
+  gen-files:
+    scripts:
+      - docs/scripts/gen-ref-pages.py
+      - docs/scripts/gen-schema.py
   mkdocstrings:
     handlers:
       python:
