--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@
 
 [build-system]
 build-backend = "hatchling.build"
-requires = ["hatchling"]
+requires = ["hatch-vcs", "hatchling"]
 
 [dependency-groups]
 build = [
@@ -12,6 +12,20 @@ build = [
   "twine>=6.1.0,<7",
 ]
 dev = ["icecream>=2.1.4,<3", "ipykernel>=6.29.5,<7", "ipython>=8.31.0,<9"]
+docs = [
+  "mdx-truly-sane-lists>=1.3",
+  "mkdocs-autorefs>=1.3.1",
+  "mkdocs-gen-files>=0.5.0",
+  "mkdocs-git-committers-plugin-2>=2.5.0",
+  "mkdocs-git-revision-date-localized-plugin>=1.3.0",
+  "mkdocs-literate-nav>=0.6.1",
+  "mkdocs-material[imaging]>=9.6.5",
+  "mkdocs-section-index>=0.3.9",
+  "mkdocs>=1.6.1",
+  "mkdocstrings-python>=1.16.1",
+  "mkdocstrings>=0.28.1",
+  "pymdown-extensions>=10.14.3",
+]
 
 [project]
 authors = [
@@ -48,6 +62,7 @@ dependencies = [
   "typer>=0.15.1,<0.16",
 ]
 description = "🍋‍🟩 AI-powered CLI for GitHub: Automate commits, generate READMEs, and manage topics with ease."
+dynamic = ["version"]
 keywords = [
   "cli",
   "code-quality",
@@ -64,7 +79,6 @@ license = "MIT"
 name = "liblaf-lime"
 readme = "docs/README.md"
 requires-python = ">=3.12"
-version = "0.1.4"
 
 [project.scripts]
 aic = "liblaf.lime.cli.commit:app"
@@ -72,6 +86,7 @@ lime = "liblaf.lime.cli:app"
 
 [project.urls]
 "Changelog" = "https://github.com/liblaf/lime/blob/main/CHANGELOG.md"
+"Documentation" = "https://liblaf.github.io/lime/"
 "Homepage" = "https://github.com/liblaf/lime"
 "Issue Tracker" = "https://github.com/liblaf/lime/issues"
 "Release Notes" = "https://github.com/liblaf/lime/releases"
@@ -80,8 +95,17 @@ lime = "liblaf.lime.cli:app"
 [tool.check-wheel-contents]
 ignore = ["W002"]
 
+[tool.hatch.build.hooks.vcs]
+version-file = "src/liblaf/lime/_version.py"
+
+[tool.hatch.build.targets.sdist]
+only-packages = true
+
 [tool.hatch.build.targets.wheel]
 packages = ["src/liblaf"]
 
+[tool.hatch.version]
+source = "vcs"
+
 [tool.uv]
-default-groups = ["build", "dev"]
+default-groups = ["build", "dev", "docs"]
