--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,13 +54,13 @@ classifiers = [
 dependencies = [
   "cyclopts>=3.16.2,<4",
   "gitpython>=3.1.44,<4",
-  "jinja2>=3.1.6",
+  "jinja2>=3.1.6,<4",
   "lazy-loader>=0.4,<0.5",
-  "liblaf-grapes>=0.1.31,<0.2",
+  "liblaf-grapes>=0.1.32,<0.2",
   "litellm>=1.71.2,<2",
   "loguru>=0.7.3,<0.8",
-  "platformdirs>=4.3.8",
-  "pydantic-settings>=2.9.1",
+  "platformdirs>=4.3.8,<5",
+  "pydantic-settings>=2.9.1,<3",
   "pydantic>=2.11.5,<3",
   "python-frontmatter>=1.1.0,<2",
   "rich>=14.0.0,<15",
