--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,80 +1,46 @@
 #:schema https://json.schemastore.org/pyproject.json
 # ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>
 
-[build-system]
-build-backend = "hatchling.build"
-requires = ["hatch-vcs", "hatchling"]
-
-[dependency-groups]
-build = ["check-wheel-contents", "hatch", "twine"]
-dev = ["icecream"]
-docs = [
-  "gitpython",
-  "mdx-truly-sane-lists",
-  "mkdocs",
-  "mkdocs-autorefs",
-  "mkdocs-gen-files",
-  "mkdocs-git-committers-plugin-2",
-  "mkdocs-git-revision-date-localized-plugin",
-  "mkdocs-include-markdown-plugin",
-  "mkdocs-literate-nav",
-  "mkdocs-material[imaging]",
-  "mkdocs-section-index",
-  "mkdocstrings",
-  "mkdocstrings-python",
-  "pymdown-extensions",
-  "ruff",
-]
-test = [
-  "pytest",
-  "pytest-benchmark",
-  "pytest-codspeed",
-  "pytest-cov",
-  "pytest-xdist",
-]
-
 [project]
+name = "liblaf-lime"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.12"
+license = "MIT"
 authors = [
-  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
+  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" },
 ]
+keywords = []
 classifiers = [
   # common classifiers
   # ref: <https://pypi.org/classifiers/>
   "Development Status :: 4 - Beta",
   "Intended Audience :: Developers",
-  "License :: OSI Approved :: MIT License",
   "License :: OSI Approved",
+  "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
+  "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
-  "Programming Language :: Python",
   "Typing :: Typed",
 ]
 dependencies = [
-  "cyclopts>=3.19.0,<4",
-  "gitpython>=3.1.44,<4",
-  "jinja2>=3.1.6,<4",
+  "cappa>=0.30,<0.31",
+  "gitpython>=3,<4",
+  "instructor[litellm]>=1,<2",
+  "jinja2>=3,<4",
   "lazy-loader>=0.4,<0.5",
-  "liblaf-grapes>=0.2.2,<0.3",
-  "litellm>=1.72.4,<2",
-  "loguru>=0.7.3,<0.8",
-  "platformdirs>=4.3.8,<5",
-  "pydantic-settings>=2.9.1,<3",
-  "pydantic>=2.11.5,<3",
-  "python-frontmatter>=1.1.0,<2",
-  "rich>=14.0.0,<15",
+  "liblaf-grapes>=1,<2",
+  "litellm>=1,<2",
+  "loguru>=0.7,<0.8",
+  "platformdirs>=4,<5",
+  "pydantic-settings>=2,<3",
+  "pydantic>=2,<3",
+  "python-frontmatter>=1,<2",
+  "rich>=14,<15",
 ]
-description = "Add your description here"
 dynamic = ["version"]
-keywords = []
-license = "MIT"
-name = "liblaf-lime"
-readme = "README.md"
-requires-python = ">=3.12"
-
-[project.scripts]
-lime = "liblaf.lime.cli:main"
 
 [project.urls]
 "Changelog" = "https://github.com/liblaf/lime/blob/main/CHANGELOG.md"
@@ -83,6 +49,40 @@ lime = "liblaf.lime.cli:main"
 "Issue Tracker" = "https://github.com/liblaf/lime/issues"
 "Release Notes" = "https://github.com/liblaf/lime/releases"
 "Source Code" = "https://github.com/liblaf/lime"
+
+[project.scripts]
+lime = "liblaf.lime.cli:main"
+
+[dependency-groups]
+build = ["check-wheel-contents", "hatch", "twine"]
+dev = ["icecream"]
+docs = [
+  "docstring-inheritance",
+  "griffe-fieldz",
+  "griffe-generics",
+  "griffe-inherited-docstrings",
+  "griffe-modernized-annotations",
+  "griffe-pydantic",
+  "griffe-warnings-deprecated",
+  "mdx-truly-sane-lists",
+  "mkdocs",
+  "mkdocs-api-autonav",
+  "mkdocs-autorefs",
+  "mkdocs-git-committers-plugin-2",
+  "mkdocs-git-revision-date-localized-plugin",
+  "mkdocs-include-markdown-plugin",
+  "mkdocs-material[imaging]",
+  "mkdocs-section-index",
+  "mkdocstrings",
+  "mkdocstrings-python",
+  "pymdown-extensions",
+  "ruff",
+]
+test = ["pytest", "pytest-codspeed", "pytest-cov", "pytest-xdist"]
+
+[build-system]
+requires = ["hatch-vcs", "hatchling"]
+build-backend = "hatchling.build"
 
 [tool.check-wheel-contents]
 ignore = ["W002"]
