--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,4 +1,5 @@
 {
   "$schema": "https://raw.githubusercontent.com/microsoft/pyright/main/packages/vscode-pyright/schemas/pyrightconfig.schema.json",
-  "extends": ".config/linters/pyrightconfig.json"
+  "extends": ".config/linters/pyrightconfig.json",
+  "reportPrivateImportUsage": "none"
 }
