feat: add JSON schema generation for LLM configuration
- Introduce `gen-schema.py` script to generate JSON schema from LLMConfig model
- Add `schemas/config.json` containing the generated schema
- Include new `gen-schema` task in mise configuration
- Update CLI commit command with temperature argument
- Add `.prettierignore` rule for schema files
- Export LLMConfig in package interfaces

--- a/.config/copier/mkdocs.yaml
+++ b/.config/copier/mkdocs.yaml
@@ -4,11 +4,7 @@
 
 site_name: "Lime"
 site_url:
-  !ENV [
-    READTHEDOCS_CANONICAL_URL,
-    SITE_URL,
-    "https://liblaf.github.io/lime/",
-  ]
+  !ENV [READTHEDOCS_CANONICAL_URL, SITE_URL, "https://liblaf.github.io/lime/"]
 site_author: "liblaf"
 repo_name: "liblaf/lime"
 repo_url: "https://github.com/liblaf/lime"
