docs: integrate schema generation with mkdocs
- Move schema generation script to docs directory
- Use mkdocs-gen-files for automatic schema inclusion
- Remove outdated files and ignore rules
- Add required dependency to pyproject.toml

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,12 +1,8 @@
-# -*- mode: yaml; -*-
-
 INHERIT: .config/copier/mkdocs.yaml
-site_name: "Lime"
+site_name: Lime
 site_description: TODO
 
 plugins:
-  mkdocstrings:
-    handlers:
-      python:
-        inventories:
-          - https://docs.python.org/3/objects.inv
+  gen-files:
+    scripts:
+      - docs/scripts/gen-schema.py
