chore: Update project configuration and dependencies
- Remove temporary workaround for questionary by dropping prompt-toolkit dependency
- Reorganize dependency groups for better separation of concerns
- Update mise task configuration paths
- Simplify pyright configuration by relying on extended config
- Add import mode for pytest
- Clean up project metadata descriptions

--- a/.config/cspell.config.yaml
+++ b/.config/cspell.config.yaml
@@ -53,6 +53,7 @@ words:
   - pypi
   - pyplot
   - pyproject
+  - pyright
   - pyrightconfig
   - pytest
   - pytype
@@ -67,4 +68,3 @@ words:
   - unshallow
   - venv
   - virtualenv
-  - xdist
