--- a/.config/mise/config.toml
+++ b/.config/mise/config.toml
@@ -1,10 +1,7 @@
 #:schema https://mise.jdx.dev/schema/mise.json
 
 [task_config]
-includes = [".config/mise/tasks/", ".config/copier/mise/tasks/"]
+includes = [".config/mise/tasks", ".config/copier/mise-tasks"]
 
 [tasks.gen-schema]
 run = "python 'scripts/gen-schema.py'"
-
-[tasks.lint]
-depends = ["lint-python", "lint-toml"]
