docs: update project documentation and metadata
Update README with new social banner, badges, and improved feature descriptions.
Add project descriptions to mkdocs.yaml and pyproject.toml.
Minor formatting fixes in prompt templates.

These changes improve the project's presentation and documentation quality,
making it more engaging and informative for users and contributors.

--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,6 +1,6 @@
 INHERIT: .config/copier/mkdocs.yaml
 site_name: Lime
-site_description:
+site_description: 🍋‍🟩 AI-powered Git commit assistant and repository documentation generator
 
 plugins:
   gen-files:
