docs: update README and prompts with improved formatting and content
- Update README badge styles and add missing workflow badges
- Remove redundant back-to-top links for cleaner layout
- Improve project links section with more comprehensive fruit-themed projects
- Update installation command from `uv sync` to `mise run install`
- Adjust features prompt example format for consistency
- Add gitmatch dependency for improved file pattern matching

The changes enhance documentation readability, maintain consistency across the project, and improve the file ignore functionality with a more robust pattern matching library.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 ]
 dependencies = [
   "cappa>=0.30,<0.31",
+  "gitmatch>=0.2,<0.3",
   "gitpython>=3,<4",
   "jinja2>=3,<4",
   "lazy-loader>=0.4,<0.5",
