--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -49,6 +49,8 @@ jobs:
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
+          verbose: true
+          print-hash: true
           attestations: true
 
   release:
@@ -69,7 +71,6 @@ jobs:
           name: ${{ needs.build.outputs.artifact-name }}
           path: dist
       - name: Upload Release Assets
-        uses: liblaf/actions/release@dist
+        uses: softprops/action-gh-release@v2
         with:
           files: dist/*
-          tag: ${{ github.ref_name }}
