--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,11 @@ docs = [
   "mkdocs>=1,<2",
   "mkdocs-gen-files>=0.5,<0.6"
 ]
-test = ["liblaf-pytest-preset>=0.1,<0.2", "pytest>=9,<10"]
+test = [
+  "liblaf-pytest-preset>=0.1,<0.2",
+  "pytest>=9,<10",
+  "pytest-asyncio>=1,<2"
+]
 
 [build-system]
 requires = ["hatch-vcs", "hatchling"]
